fix: replace ui-icons, adjust wordpic spacing
The icons were lost when removing the JQuery UI theme in 0f4a6f30

--- a/app/styles/sidebar.scss
+++ b/app/styles/sidebar.scss
@@ -35,15 +35,6 @@
     cursor: pointer;
 }
 
-.sidebar_info {
-    display: inline-block;
-    vertical-align: middle;
-    position: relative;
-    top: 1px;
-    left: 5px;
-    opacity: 0.8;
-}
-
 .kwic_sidebar {
     background-color: #fff;
     border-style: solid;
