--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -537,21 +537,8 @@ table {
   margin-top : 1em;
 }
 
-.word-pic-kwic-example {
-    cursor: pointer;
-}
-
 .lemgram_result {
-  float: left;
-  padding-top: 4px;
-  padding-bottom: 5px;
-  padding-left: 5px;
-  padding-right: 2px;
   counter-reset: wordpic;
-  table {
-    padding: 0 0;
-    margin: 0 0;
-  }
 }
 
 .table_scrollarea {
